test/integration/good/tuples/tuple-constraints-data2.stan
data {
  tuple(int<lower=0>, tuple(real<lower=1>, int<upper=2>)) y;
  tuple(int<lower=0>, real<lower=1>, simplex[2]) x;
}
