test/integration/bad/new/ill-formed-expression3.stan
data { vector<upper=T/while> x;}